Added style with CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Landing-page</title>
     <link href="style.css" rel="stylesheet">
 </head>
+<!-- Header -->
 <header>
     <div class="container-header">
     <div class="logo">Exequiel Barboza</div>
@@ -17,39 +18,50 @@
     </div>
 </header>
 <body>
+<!-- Part 1 -->
     <div class="part-1">
         <div class="container-presentation">
             <div class="title">My name is Exequiel Barboza</div>
             <div class="presentation">I´m from Argentina and i´m 24yo, i´m currenly learning Web developing with The Odin Project.</div>
-            <button>Click me!</button>
+            <button class="first-button">Click me!</button>
         </div>
-        <div class="me-photo"><img src="Images/Yo.jpg"></div>
+        <img class="me-photo" src="Images/Yo.jpg">
     </div>
+<!-- Part 2 -->
     <div class="part-2">
         <div>Some projects I made</div>
-        <div class="projects"></div>
-            <div class="project-1"><img src="Images/rock-and-scissors.jpg"></div>
-            <div class="project-1-description">This is a game of rock, papel and scissors</div>
-            <div class="project-2"><img src="Images/etch-a-sketch.jpg"></div>
-            <div class="project-2-description">This is a etch a sketch simulator</div>
-            <div class="project-3"><img src="Images/calculator.jpg"></div>
-            <div class="project-3-description">A simple calculator</div>
-            <div class="project-4"><img src="Images/question-mark.png"></div>
-            <div class="project-4-description">Waiting for the next challenge!</div>
+        <div class="projects-images">
+            <img src="Images/rock-and-scissors.jpg">
+            <img src="Images/etch-a-sketch.jpg">
+            <img src="Images/calculator.jpg">
+            <img src="Images/question-mark.png">
+        </div>
+        <div class="projects-description">
+            <div class="project-description">This is a game of rock, papel and scissors</div>
+            <div class="project-description">This is a etch a sketch simulator</div>
+            <div class="project-description">A simple calculator</div>
+            <div class="project-description">Waiting for the next challenge!</div>
+        </div>
     </div>
+    <!-- Part 3 -->
     <div class="part-3">
-        <div class="container-quote">
+        <div class="quote-container">
             <div class="quote">Coding like poetry should be short and concise.</div>
             <div class="quote-author">Santosh Kalwar</div>
         </div>
     </div>
+<!-- Part 4 -->
     <div class="part-4">
-        <div class="container-part-4"></div>
-            <div>Click the button if you like the web</div>
-            <div>To made this website I´ve learned flexbox.</div>
-            <button>Click here!</button>
+        <div class="container-part-4">
+            <div class="two-texts">
+                <div class="Clickbutton">Click the button if you like the web</div>
+                <div class="tomade">To made this website I´ve learned flexbox.</div>
+            </div>
+            <button class="button-final">Click here!</button>
+        </div>
     </div>
 </body>
+<!-- Footer -->
 <footer class="footer">
     <div>With love, Exequiel ♥!</div>
 </footer>
