Changes in CSS file(header.part 2 and buttons)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container-header">
     <div class="logo">Exequiel Barboza</div>
         <div class="container">
-            <div class="option-1">About me.</div>
-            <div class="option-2">Resources.</div>
-            <div class="option-3">Projects.</div>
+            <div class="option-1">About me</div>
+            <div class="option-2">Resources</div>
+            <div class="option-3">Projects</div>
         </div>
     </div>
 </header>
@@ -29,18 +29,24 @@
     </div>
 <!-- Part 2 -->
     <div class="part-2">
-        <div>Some projects I made</div>
-        <div class="projects-images">
-            <img src="Images/rock-and-scissors.jpg">
-            <img src="Images/etch-a-sketch.jpg">
-            <img src="Images/calculator.jpg">
-            <img src="Images/question-mark.png">
-        </div>
-        <div class="projects-description">
-            <div class="project-description">This is a game of rock, papel and scissors</div>
-            <div class="project-description">This is a etch a sketch simulator</div>
-            <div class="project-description">A simple calculator</div>
-            <div class="project-description">Waiting for the next challenge!</div>
+        <h2>Some projects I made</h2>
+        <div class="projects-container">
+            <div class="project">
+                <img src="Images/rock-and-scissors.jpg">
+                <p class="project-description">This is a game of rock, papel and scissors</p>
+            </div>
+            <div class="project">
+                <img src="Images/etch-a-sketch.jpg">
+                <p class="project-description">This is a etch a sketch simulator</p>
+            </div>
+            <div class="project">
+                <img src="Images/calculator.jpg">
+                <p class="project-description">A simple calculator</p>
+            </div>
+            <div class="project">
+                <img src="Images/question-mark.png">
+                <p class="project-description">Waiting for the next challenge!</p>
+            </div>
         </div>
     </div>
     <!-- Part 3 -->
