Change some sizes to the header,background color to 2 and 3 part and added some rotation and scale to images.

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <h2>Some projects I made</h2>
         <div class="projects-container">
             <div class="project">
-                <img src="Images/rock-and-scissors.jpg">
+                <img class="image" src="Images/rock-and-scissors.jpg">
                 <p class="project-description">This is a game of rock, papel and scissors</p>
             </div>
             <div class="project">
-                <img src="Images/etch-a-sketch.jpg">
+                <img class="image" src="Images/etch-a-sketch.jpg">
                 <p class="project-description">This is a etch a sketch simulator</p>
             </div>
             <div class="project">
-                <img src="Images/calculator.jpg">
+                <img class="image" src="Images/calculator.jpg">
                 <p class="project-description">A simple calculator</p>
             </div>
             <div class="project">
-                <img src="Images/question-mark.png">
+                <img class="image" src="Images/question-mark.png">
                 <p class="project-description">Waiting for the next challenge!</p>
             </div>
         </div>
@@ -52,8 +52,8 @@
     <!-- Part 3 -->
     <div class="part-3">
         <div class="quote-container">
-            <div class="quote">Coding like poetry should be short and concise.</div>
-            <div class="quote-author">Santosh Kalwar</div>
+            <em class="quote">Coding like poetry should be short and concise.</em>
+            <p class="quote-author">Santosh Kalwar</p>
         </div>
     </div>
 <!-- Part 4 -->
